# arm_template

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  readme.md
src/: CMakeLists.txt  main.cpp
toolchains/: gcc_arm.cmake  gcc_arm64.cmake  toolchain.cmake
